--- a/nbs/00_pipeline.ipynb
+++ b/nbs/00_pipeline.ipynb
@@ -33,7 +33,10 @@
     "from counternet.training_module import BaseModule, CFNetTrainingModule\n",
     "from counternet.model import BaselinePredictiveModel, CounterNetModel\n",
     "from counternet.cf_explainer import ExplainerBase, LocalExplainerBase, GlobalExplainerBase, VanillaCF\n",
-    "from counternet.evaluation import SensitivityMetric, proximity"
+    "from counternet.evaluation import SensitivityMetric, proximity\n",
+    "\n",
+    "logging.getLogger('pytorch_lightning').setLevel(logging.ERROR)\n",
+    "pl_logger = logging.getLogger(\"pytorch_lightning.core\")"
    ]
   },
   {
@@ -87,7 +90,7 @@
     "                 callbacks: Optional[List[Callback]] = None,\n",
     "                 description: Optional[str] = None,\n",
     "                 debug: Optional[bool] = False,\n",
-    "                 logger: Optional[LightningLoggerBase] = None,\n",
+    "                 logger: Optional[Union[LightningLoggerBase, bool]] = None,\n",
     "                 logger_name: str = \"debug\"):\n",
     "\n",
     "        if logger is None:\n",
@@ -274,8 +277,8 @@
     }
    ],
    "source": [
-    "t_config = load_json('assets/configs/trainer.json')\n",
-    "m_config = load_json('assets/configs/adult.json')\n",
+    "t_config = load_configs('assets/configs/trainer.json')\n",
+    "m_config = load_configs('assets/configs/adult.json')\n",
     "model = BaselinePredictiveModel(m_config)\n",
     "model_trainer = ModelTrainer(\n",
     "    model, t_config\n",
@@ -319,7 +322,7 @@
     "        self.dataset = pred_model.test_dataset\n",
     "        self.sensitivity = pred_model.sensitivity\n",
     "\n",
-    "    def generate(self, dataset: Optional[TensorDataset]=None):\n",
+    "    def generate(self, dataset: Optional[TensorDataset]=None, test_size: Optional[int] = None, debug: bool = False):\n",
     "        raise NotImplementedError"
    ]
   },
@@ -342,7 +345,6 @@
     "            pred_model: BaselinePredictiveModel, configs: Dict[str, Any] = {}):\n",
     "        super().__init__(cf_algo, pred_model, configs)\n",
     "        # define cf_algo\n",
-    "        print(cf_algo)\n",
     "        if not issubclass(type(cf_algo), LocalExplainerBase):\n",
     "            raise ValueError(f\"cf_algo should be an instance of `{LocalExplainerBase}`, but got `{type(cf_algo)}`. \")\n",
     "        CFExplainer = type(cf_algo)\n",
@@ -352,7 +354,7 @@
     "\n",
     "        self.is_parallel = configs['is_parallel'] if 'is_parallel' in configs else True\n",
     "\n",
-    "    def __gen_step(self, ix, x, y):\n",
+    "    def gen_step(self, x):\n",
     "        x = x.reshape(1, -1)\n",
     "        cf = self.cf_algo.generate_cf(x)\n",
     "        return x, cf\n",
@@ -362,7 +364,7 @@
     "        start_time = time.time()\n",
     "        for ix, (x, y) in enumerate(tqdm(dataset)):\n",
     "            if ix < size:\n",
-    "                x, cf = self.__gen_step(ix, x, y)\n",
+    "                x, cf = self.gen_step(x)\n",
     "                result.append((x, cf))\n",
     "        total_time = time.time() - start_time\n",
     "        avg_time = total_time / size\n",
@@ -377,17 +379,20 @@
     "            cf_algo[ix, :] = cf\n",
     "        return X, cf_algo\n",
     "\n",
-    "    def generate(self, dataset: Optional[TensorDataset]=None, debug: bool = False):\n",
+    "    def generate(self, dataset: Optional[TensorDataset] = None, test_size: Optional[int] = None, debug: bool = False):\n",
     "        if dataset is None:\n",
     "            dataset = self.pred_model.test_dataset\n",
-    "        size = len(dataset) if not debug else 3\n",
+    "        if test_size is None:\n",
+    "            size = len(dataset) if not debug else 3\n",
+    "        else:\n",
+    "            size = test_size\n",
     "\n",
     "        result = []\n",
     "\n",
     "        if self.is_parallel:\n",
     "            print(f\"generating {size} cfs in parallel...\")\n",
     "            result = Parallel(n_jobs=-1, max_nbytes=None, verbose=False)(\n",
-    "                delayed(self.__gen_step) (ix=ix, x=x, y=y)\n",
+    "                delayed(self.gen_step) (x=x)\n",
     "                for ix, (x, y) in enumerate(tqdm(dataset)) if ix < size\n",
     "            )\n",
     "            print(f\"evaluating speed by generating 50 cfs...\")\n",
@@ -478,11 +483,14 @@
     "            pred_model = cf_algo\n",
     "        super().__init__(cf_algo, pred_model, configs)\n",
     "\n",
-    "    def generate(self, dataset: Optional[TensorDataset]=None):\n",
+    "    def generate(self, dataset: Optional[TensorDataset]=None, test_size: Optional[int] = None, debug: bool = False):\n",
     "        if dataset is None:\n",
     "            dataset = self.pred_model.test_dataset\n",
+    "        if test_size is None:\n",
+    "            size = len(dataset) if not debug else 3\n",
+    "        else:\n",
+    "            size = test_size\n",
     "        x, y = dataset[:]\n",
-    "        size = 1000\n",
     "\n",
     "        print(f\"generating {len(dataset)} cfs...\")\n",
     "        cf = self.cf_algo.generate_cf(x)\n",
@@ -499,8 +507,6 @@
     "        cf_y = flip_binary(y_hat)\n",
     "        cf_y_hat = self.pred_model.predict(cf)\n",
     "        sensitivity = self.pred_model.sensitivity\n",
-    "        for t in [x, cf, y, y_hat, cf_y, cf_y_hat]:\n",
-    "            print(t.size())\n",
     "\n",
     "        self.results.update({'x': x, 'cf': cf, 'y': y, 'y_hat': y_hat, 'cf_y': cf_y, 'cf_y_hat': cf_y_hat})\n",
     "        self.results.update({'sensitivity': sensitivity(x, cf, cf_y).item(), 'cat_idx': sensitivity.cat_idx})\n",
@@ -544,8 +550,6 @@
     "\n",
     "        x, cf, y, y_hat, cf_y, cf_y_hat = results['x'], results['cf'], results['y'], \\\n",
     "            results['y_hat'], results['cf_y'], results['cf_y_hat']\n",
-    "        for t in [x, cf, y, y_hat, cf_y, cf_y_hat]:\n",
-    "            print(t.size())\n",
     "        cat_idx, cf_name = results['cat_idx'], results['cf_algo']\n",
     "\n",
     "        r['cont_proximity'][cf_name] = proximity(x[:, :cat_idx], cf[:, :cat_idx]).item()\n",
@@ -556,9 +560,8 @@
     "        r['time'][cf_name] = results['avg_time']\n",
     "        r['pred_accuracy'][cf_name] = accuracy(y.int(), y_hat.int()).item()\n",
     "\n",
-    "\n",
     "        final_result_df = pd.DataFrame.from_dict(r)\n",
-    "        print(tabulate(final_result_df, headers = 'keys', tablefmt = 'psql'))\n",
+    "        print(tabulate(final_result_df.astype(\"float16\"), headers = 'keys', tablefmt = 'pretty'))\n",
     "        if self.is_logging:\n",
     "            final_result_df.to_csv(csv_path)\n",
     "            torch.save(results, dir_path / f\"{cf_name}_results.pt\")\n",
@@ -607,7 +610,7 @@
     "# export\n",
     "class Experiment(object):\n",
     "    def __init__(self, explainers: List[ExplainerBase],\n",
-    "            m_configs: List[Dict[str, Any]], t_configs: Optional[Dict[str, Any]] = None):\n",
+    "            m_configs: List[Dict[str, Any]], t_configs: Optional[Dict[str, Any]] = None, debug: bool = False):\n",
     "        self.explainers = explainers\n",
     "        self.m_configs = m_configs\n",
     "        self.use_pred_model = False # need a `BaselinePredictiveModel` or not\n",
@@ -617,6 +620,7 @@
     "        else:\n",
     "            self.t_configs = t_configs\n",
     "        self.__check_explainers()\n",
+    "        self.debug = debug\n",
     "\n",
     "        self.evaluator = Evaluator(configs={'is_logging': True})\n",
     "\n",
@@ -627,11 +631,12 @@
     "        for explainer in self.explainers: # explainer is already passed as a type\n",
     "            if self.__is_type(explainer):\n",
     "                explainer_type = deepcopy(explainer)\n",
+    "                explainer = explainer_type(self.m_configs[0])\n",
     "            else:\n",
     "                explainer_type = type(explainer)\n",
     "            if not issubclass(explainer_type, ExplainerBase):\n",
     "                raise ValueError(f\"The explainer should be a subclass of `{ExplainerBase}`, but got `{explainer_type}`\")\n",
-    "            if not isinstance(explainer, CFNetTrainingModule):\n",
+    "            if not (isinstance(explainer, CounterNetModel) or (issubclass(explainer_type, CFNetTrainingModule))):\n",
     "                self.use_pred_model = True\n",
     "\n",
     "    def __check_seeds(self, seeds: Optional[List[int]]):\n",
@@ -652,37 +657,43 @@
     "            CFExplainer = type(explainer)\n",
     "        else:\n",
     "            CFExplainer = explainer\n",
-    "        print(CFExplainer)\n",
     "        if issubclass(CFExplainer, GlobalExplainerBase):\n",
     "            if issubclass(CFExplainer, CounterNetModel):\n",
     "                model = CFExplainer(m_config)\n",
     "            else: # need a predive model otherwise\n",
     "                model = CFExplainer(m_config, pred_model)\n",
-    "            cfnet_trainer = ModelTrainer(model, self.t_configs)\n",
+    "            logger_name = f\"{CFExplainer.__name__.lower()}/{m_config['dataset_name']}\"\n",
+    "            cfnet_trainer = ModelTrainer(model, self.t_configs, logger_name=logger_name)\n",
     "            cfnet_trainer.fit()\n",
     "            cfnet_trainer.save_best_model(dir_path)\n",
     "            cf_generator = GlobalCFGenerator(model)\n",
     "        else:\n",
+    "            print(f\"Generating local explanation for {CFExplainer}\")\n",
     "            cf_generator = LocalCFGenerator(CFExplainer(pred_model.predict), pred_model)\n",
-    "        results = cf_generator.generate()\n",
+    "        results = cf_generator.generate(debug=self.debug)\n",
     "        self.evaluator.eval(results, dir_path)\n",
     "\n",
     "    def experiment_step(self, m_config, seed: List[int]):\n",
+    "        # train a baseline predictive model\n",
     "        if self.use_pred_model:\n",
-    "            pred_model = BaselinePredictiveModel(m_config)\n",
+    "            print(\"training predictive model...\")\n",
+    "            pred_model_trainer = ModelTrainer(\n",
+    "                BaselinePredictiveModel(m_config), self.t_configs, logger_name=\"pred_model\")\n",
+    "            pred_model = pred_model_trainer.fit()\n",
+    "        else:\n",
+    "            pred_model = None\n",
+    "\n",
     "        dataset_name = m_config['dataset_name']\n",
     "        # logging dir\n",
     "        dir_path = self.__make_dir(dataset_name, seed)\n",
-    "        # train a baseline predictive model\n",
-    "        pred_model_trainer = ModelTrainer(pred_model, self.t_configs)\n",
-    "        pred_model = pred_model_trainer.fit()\n",
+    "        \n",
     "        for explainer in self.explainers:\n",
     "            self.explainer_step(explainer, pred_model, m_config, dir_path)\n",
     "\n",
     "    def run(self, seeds: Optional[List[int]] = None):\n",
     "        seeds = self.__check_seeds(seeds)\n",
     "        for seed in seeds:\n",
-    "            seed_everything(seed)\n",
+    "            seed_everything(seed, workers=True)\n",
     "            for m_config in self.m_configs:\n",
     "                self.experiment_step(m_config, seed)"
    ]
@@ -791,7 +802,8 @@
     }
    ],
    "source": [
-    "experiment = Experiment(explainers = [CounterNetModel, VanillaCF], m_configs=[load_configs(Path('assets/configs/adult.json'))])\n",
+    "experiment = Experiment(explainers = [CounterNetModel, VanillaCF], \n",
+    "    m_configs=[load_configs(Path('assets/configs/adult.json'))], debug=True)\n",
     "experiment.run()\n"
    ]
   }
