--- a/nbs/01b_data.ipynb
+++ b/nbs/01b_data.ipynb
@@ -389,15 +389,15 @@
    "outputs": [],
    "source": [
     "configs = [\n",
-    "    (\"adult\", load_json(\"assets/configs/adult.json\")),\n",
-    "    (\"home\", load_json(\"assets/configs/home.json\")),\n",
-    "    (\"student\", load_json(\"assets/configs/student.json\")),\n",
-    "    (\"breast_cancer\", load_json(\"assets/configs/extra/breast_cancer.json\")),\n",
-    "    (\"credit_card\", load_json(\"assets/configs/extra/credit_card.json\")),\n",
-    "    (\"german_credit\", load_json(\"assets/configs/extra/german_credit.json\")),\n",
-    "    (\"heart\", load_json(\"assets/configs/extra/heart.json\")),\n",
-    "    (\"student_performance\", load_json(\"assets/configs/extra/student_performance.json\")),\n",
-    "    (\"titanic\", load_json(\"assets/configs/extra/titanic.json\")),\n",
+    "    (\"adult\", load_configs(\"assets/configs/adult.json\")),\n",
+    "    (\"home\", load_configs(\"assets/configs/home.json\")),\n",
+    "    (\"student\", load_configs(\"assets/configs/student.json\")),\n",
+    "    (\"breast_cancer\", load_configs(\"assets/configs/extra/breast_cancer.json\")),\n",
+    "    (\"credit_card\", load_configs(\"assets/configs/extra/credit_card.json\")),\n",
+    "    (\"german_credit\", load_configs(\"assets/configs/extra/german_credit.json\")),\n",
+    "    (\"heart\", load_configs(\"assets/configs/extra/heart.json\")),\n",
+    "    (\"student_performance\", load_configs(\"assets/configs/extra/student_performance.json\")),\n",
+    "    (\"titanic\", load_configs(\"assets/configs/extra/titanic.json\")),\n",
     "]"
    ]
   },
