--- a/nbs/02_cf_explainer.ipynb
+++ b/nbs/02_cf_explainer.ipynb
@@ -78,7 +78,7 @@
     "        super().__init__()\n",
     "        self.pred_fn = pred_fn\n",
     "        self.configs = configs\n",
-    "        self.clamp = Clamp()\n",
+    "        # self.clamp = Clamp()\n",
     "\n",
     "    def forward(self):\n",
     "        raise NotImplementedError\n",
