--- a/nbs/02b_counter_net.ipynb
+++ b/nbs/02b_counter_net.ipynb
@@ -31,9 +31,7 @@
     "from counternet.import_essentials import *\n",
     "from counternet.utils import *\n",
     "from counternet.evaluation import SensitivityMetric, ProximityMetric\n",
-    "from counternet.cf_explainer import GlobalExplainerBase\n",
-    "\n",
-    "pl_logger = logging.getLogger('lightning').setLevel(logging.ERROR)"
+    "from counternet.cf_explainer import GlobalExplainerBase"
    ]
   },
   {
@@ -469,7 +467,7 @@
     "        n = 0\n",
     "        for cat in categories:\n",
     "            n += len(cat)\n",
-    "        return X_cat.size(-1) == n\n",
+    "        assert X_cat.size(-1) == n\n",
     "\n",
     "    def training_epoch_end(self, outs):\n",
     "        if self.current_epoch == 0:\n",
@@ -483,14 +481,14 @@
     "        # preprocessing\n",
     "        self.scaler = MinMaxScaler()\n",
     "        self.ohe = OneHotEncoder()\n",
-    "        X_cont = self.scaler.fit_transform(X[self.continous_cols]) if self.continous_cols else np.array([[] for _ in range(len(X))])\n",
-    "        X_cat = self.ohe.fit_transform(X[self.discret_cols]) if self.discret_cols else np.array([[] for _ in range(len(X))])\n",
+    "        X_cont = self.scaler.fit_transform(X[self.continous_cols]) if self.continous_cols else torch.tensor([[] for _ in range(len(X))])\n",
+    "        X_cat = self.ohe.fit_transform(X[self.discret_cols]) if self.discret_cols else torch.tensor([[] for _ in range(len(X))])\n",
     "        X = torch.cat((X_cont, X_cat), dim=1)\n",
     "\n",
     "        # init categorical normalizer to enable categorical features to be one-hot-encoding format\n",
     "        cat_arrays = self.ohe.categories_ if self.discret_cols else []\n",
     "        self.cat_normalizer = CategoricalNormalizer(cat_arrays, cat_idx=len(self.continous_cols))\n",
-    "        assert self.__check_cat_size(X_cat, cat_arrays)\n",
+    "        self.__check_cat_size(X_cat, cat_arrays)\n",
     "\n",
     "        # init sensitivity metric\n",
     "        self.sensitivity = SensitivityMetric(\n",
@@ -1005,8 +1003,8 @@
    "source": [
     "from counternet.pipeline import ModelTrainer\n",
     "\n",
-    "t_config = load_json('assets/configs/trainer.json')\n",
-    "m_config = load_json('assets/configs/adult.json')\n",
+    "t_config = load_configs('assets/configs/trainer.json')\n",
+    "m_config = load_configs('assets/configs/adult.json')\n",
     "model = CounterNetModel(m_config)\n",
     "model_trainer = ModelTrainer(\n",
     "    model, t_config\n",
