implement VAE-CF and DiverseCF

--- a/nbs/00_pipeline.ipynb
+++ b/nbs/00_pipeline.ipynb
@@ -32,7 +32,8 @@
     "from counternet.utils import *\n",
     "from counternet.training_module import BaseModule, CFNetTrainingModule\n",
     "from counternet.model import BaselinePredictiveModel, CounterNetModel\n",
-    "from counternet.cf_explainer import ExplainerBase, LocalExplainerBase, GlobalExplainerBase, VanillaCF\n",
+    "from counternet.base_interface import LocalExplainerBase, GlobalExplainerBase, ExplainerBase\n",
+    "from counternet.cf_explainer import VanillaCF\n",
     "from counternet.evaluation import SensitivityMetric, proximity\n",
     "\n",
     "logging.getLogger('pytorch_lightning').setLevel(logging.ERROR)\n",
@@ -96,7 +97,7 @@
     "        if logger is None:\n",
     "            logger = pl_loggers.TestTubeLogger(\n",
     "                Path('log/'), name=logger_name,\n",
-    "                description=description, debug=debug, log_graph=True\n",
+    "                description=description, debug=debug, log_graph=False\n",
     "            )\n",
     "\n",
     "        # model checkpoint\n",
@@ -389,7 +390,7 @@
     "\n",
     "        result = []\n",
     "\n",
-    "        if self.is_parallel:\n",
+    "        if self.is_parallel and not debug:\n",
     "            print(f\"generating {size} cfs in parallel...\")\n",
     "            result = Parallel(n_jobs=-1, max_nbytes=None, verbose=False)(\n",
     "                delayed(self.gen_step) (x=x)\n",
@@ -626,12 +627,12 @@
     "\n",
     "    def __is_type(self, instance):\n",
     "        return isinstance(type(instance), type) or isinstance(type(instance), ABCMeta)\n",
-    "            \n",
+    "\n",
     "    def __check_explainers(self):\n",
     "        for explainer in self.explainers: # explainer is already passed as a type\n",
     "            if self.__is_type(explainer):\n",
     "                explainer_type = deepcopy(explainer)\n",
-    "                explainer = explainer_type(self.m_configs[0])\n",
+    "                # explainer = explainer_type(self.m_configs[0])\n",
     "            else:\n",
     "                explainer_type = type(explainer)\n",
     "            if not issubclass(explainer_type, ExplainerBase):\n",
@@ -662,6 +663,7 @@
     "                model = CFExplainer(m_config)\n",
     "            else: # need a predive model otherwise\n",
     "                model = CFExplainer(m_config, pred_model)\n",
+    "            # train CounterNet/GlobalCFExplainer \n",
     "            logger_name = f\"{CFExplainer.__name__.lower()}/{m_config['dataset_name']}\"\n",
     "            cfnet_trainer = ModelTrainer(model, self.t_configs, logger_name=logger_name)\n",
     "            cfnet_trainer.fit()\n",
@@ -686,7 +688,7 @@
     "        dataset_name = m_config['dataset_name']\n",
     "        # logging dir\n",
     "        dir_path = self.__make_dir(dataset_name, seed)\n",
-    "        \n",
+    "\n",
     "        for explainer in self.explainers:\n",
     "            self.explainer_step(explainer, pred_model, m_config, dir_path)\n",
     "\n",
