--- a/nbs/02b_counter_net.ipynb
+++ b/nbs/02b_counter_net.ipynb
@@ -25,13 +25,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Global seed set to 31\n"
+     ]
+    }
+   ],
    "source": [
     "# export\n",
     "from counternet.import_essentials import *\n",
     "from counternet.utils import *\n",
     "from counternet.evaluation import SensitivityMetric, ProximityMetric\n",
-    "from counternet.cf_explainer import GlobalExplainerBase"
+    "from counternet.base_interface import ABCBaseModule, GlobalExplainerBase"
    ]
   },
   {
@@ -337,6 +345,19 @@
     "def l1_mean(x, c):\n",
     "    return F.l1_loss(x, c, reduction='mean') / x.abs().mean() # MAD\n",
     "\n",
+    "def hinge_loss(input, target):\n",
+    "    \"\"\"\n",
+    "    reference:\n",
+    "    - https://github.com/interpretml/DiCE/blob/a772c8d4fcd88d1cab7f2e02b0bcc045dc0e2eab/dice_ml/explainer_interfaces/dice_pytorch.py#L196-L202\n",
+    "    - https://en.wikipedia.org/wiki/Hinge_loss\n",
+    "    \"\"\"\n",
+    "    input = torch.log((abs(input - 1e-6) / (1 - abs(input - 1e-6))))\n",
+    "    all_ones = torch.ones_like(target)\n",
+    "    target = 2 * target - all_ones\n",
+    "    loss = all_ones - torch.mul(target, input)\n",
+    "    loss = F.relu(loss)\n",
+    "    return torch.norm(loss)\n",
+    "\n",
     "def get_loss_functions(f_name: str):\n",
     "    _loss_functions = {\n",
     "        'cross_entropy': F.binary_cross_entropy,\n",
@@ -393,27 +414,6 @@
    "metadata": {},
    "source": [
     "## Base Module"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export\n",
-    "class ABCBaseModule(ABC):\n",
-    "    @abstractmethod\n",
-    "    def model_forward(self, *x):\n",
-    "        raise NotImplementedError\n",
-    "\n",
-    "    @abstractmethod\n",
-    "    def forward(self, *x):\n",
-    "        raise NotImplementedError\n",
-    "\n",
-    "    @abstractmethod\n",
-    "    def predict(self, *x):\n",
-    "        raise NotImplementedError"
    ]
   },
   {
